[package]
name = "ilmp"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
orion = "0.15.1"
serde = { version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
futures = "0.3.5"
futures-util = "0.3.5"
uuid = { version  = "0.8.1", features = ["v4"] }
chrono = "0.4.11"
