[package]
name = "ilmp"
version = "0.1.0"
authors = ["Isabelle L. <me@izzabelle.dev>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
futures = "0.3.5"
futures-util = "0.3.5"
uuid = { version  = "0.8.1", features = ["v4"] }
chrono = "0.4.11"
ring = "0.16.13"
anyhow = "1.0.30"
thiserror = "1.0.17"
crc32fast = "1.2.0"
orion = "0.15.1"
